; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_filelockbytes.c_GetProtectMode.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_filelockbytes.c_GetProtectMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_READWRITE = common dso_local global i32 0, align 4
@PAGE_READONLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @GetProtectMode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetProtectMode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @STGM_ACCESS_MODE(i32 %4)
  switch i32 %5, label %8 [
    i32 128, label %6
    i32 129, label %6
  ]

6:                                                ; preds = %1, %1
  %7 = load i32, i32* @PAGE_READWRITE, align 4
  store i32 %7, i32* %2, align 4
  br label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @PAGE_READONLY, align 4
  store i32 %9, i32* %2, align 4
  br label %10

10:                                               ; preds = %8, %6
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}

declare dso_local i32 @STGM_ACCESS_MODE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
